// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast should render 1`] = `
<body>
  <div>
    <script
      nonce=""
    >
      ((e, s, n, l, o, d, u, h)=&gt;{
    let m = document.documentElement, w = [
        "light",
        "dark"
    ];
    function p(r) {
        (Array.isArray(e) ? e : [
            e
        ]).forEach((y)=&gt;{
            let k = y === "class", S = k && d ? o.map((f)=&gt;d[f] || f) : o;
            k ? (m.classList.remove(...S), m.classList.add(d && d[r] ? d[r] : r)) : m.setAttribute(y, r);
        }), C(r);
    }
    function C(r) {
        h && w.includes(r) && (m.style.colorScheme = r);
    }
    function a() {
        return window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light";
    }
    if (l) p(l);
    else try {
        let r = localStorage.getItem(s) || n, y = u && r === "system" ? a() : r;
        p(y);
    } catch (r) {}
})("class","theme","system",null,["light","dark"],null,true,true)
    </script>
    <section
      aria-atomic="false"
      aria-label="Notifications alt+T"
      aria-live="polite"
      aria-relevant="additions text"
      tabindex="-1"
    />
    <div
      class="flex w-[360px] flex-col gap-4"
    >
      <div
        class="flex w-[360px] items-center justify-between gap-3 rounded-md bg-dark-normal px-4 py-3 dark:bg-normal"
      >
        <div
          class="flex items-center justify-start gap-2"
        >
          <div
            class="text-dark-label-normal dark:text-label-normal"
            height="20"
            width="20"
          />
          <div
            class="flex flex-col gap-1"
          >
            <p
              class="text-14/body/emp text-dark-label-normal dark:text-label-normal"
            >
              Example Toast
            </p>
            <p
              class="text-dark-label-assertive dark:text-label-assertive text-12/body"
            >
              This is toast description.
            </p>
          </div>
        </div>
      </div>
      <button
        class="group inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-normal dark:bg-dark-primary-normal !text-normal dark:!text-dark-normal disabled:bg-background-disabled dark:disabled:bg-dark-background-disabled disabled:text-label-disabled dark:disabled:text-dark-label-disabled h-10 px-5 text-14/button gap-1.5 relative overflow-hidden w-[160px]"
      >
        <div
          class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
        />
        <span
          class="relative z-10"
        >
          Show Toast
        </span>
      </button>
    </div>
  </div>
</body>
`;

exports[`Toast should render 2`] = `
<body>
  <div>
    <script
      nonce=""
    >
      ((e, s, n, l, o, d, u, h)=&gt;{
    let m = document.documentElement, w = [
        "light",
        "dark"
    ];
    function p(r) {
        (Array.isArray(e) ? e : [
            e
        ]).forEach((y)=&gt;{
            let k = y === "class", S = k && d ? o.map((f)=&gt;d[f] || f) : o;
            k ? (m.classList.remove(...S), m.classList.add(d && d[r] ? d[r] : r)) : m.setAttribute(y, r);
        }), C(r);
    }
    function C(r) {
        h && w.includes(r) && (m.style.colorScheme = r);
    }
    function a() {
        return window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light";
    }
    if (l) p(l);
    else try {
        let r = localStorage.getItem(s) || n, y = u && r === "system" ? a() : r;
        p(y);
    } catch (r) {}
})("class","theme","system",null,["light","dark"],null,true,true)
    </script>
    <section
      aria-atomic="false"
      aria-label="Notifications alt+T"
      aria-live="polite"
      aria-relevant="additions text"
      tabindex="-1"
    />
    <div
      class="flex flex-col items-start gap-4"
    >
      <div
        class="flex items-center gap-6"
      >
        <span
          class="w-[100px] text-14/body text-gray-600"
        >
          default
        </span>
        <div
          class="flex w-[360px] items-center justify-between gap-3 rounded-md bg-dark-normal px-4 py-3 dark:bg-normal"
        >
          <div
            class="flex items-center justify-start gap-2"
          >
            <div
              class="text-dark-label-normal dark:text-label-normal"
              height="20"
              width="20"
            />
            <div
              class="flex flex-col gap-1"
            >
              <p
                class="text-14/body/emp text-dark-label-normal dark:text-label-normal"
              >
                Example Toast
              </p>
            </div>
          </div>
        </div>
        <div
          class="flex w-[360px] items-center justify-between gap-3 rounded-md bg-dark-normal px-4 py-3 dark:bg-normal"
        >
          <div
            class="flex items-center justify-start gap-2"
          >
            <div
              class="text-dark-label-normal dark:text-label-normal"
              height="20"
              width="20"
            />
            <div
              class="flex flex-col gap-1"
            >
              <p
                class="text-14/body/emp text-dark-label-normal dark:text-label-normal"
              >
                Example Toast
              </p>
            </div>
          </div>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-normal dark:bg-dark-primary-normal disabled:bg-background-disabled dark:disabled:bg-dark-background-disabled disabled:text-label-disabled dark:disabled:text-dark-label-disabled h-8 px-4 text-14/button gap-1 relative overflow-hidden !text-label-normal dark:!text-dark-label-normal !w-fit !bg-normal dark:!bg-dark-normal"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Click me
            </span>
          </button>
        </div>
        <div
          class="flex w-[360px] items-center justify-between gap-3 rounded-md bg-dark-normal px-4 py-3 dark:bg-normal"
        >
          <div
            class="flex items-center justify-start gap-2"
          >
            <div
              class="text-dark-label-normal dark:text-label-normal"
              height="20"
              width="20"
            />
            <div
              class="flex flex-col gap-1"
            >
              <p
                class="text-14/body/emp text-dark-label-normal dark:text-label-normal"
              >
                Example Toast
              </p>
              <p
                class="text-dark-label-assertive dark:text-label-assertive text-12/body"
              >
                This is toast description.
              </p>
            </div>
          </div>
        </div>
        <div
          class="flex w-[360px] items-center justify-between gap-3 rounded-md bg-dark-normal px-4 py-3 dark:bg-normal"
        >
          <div
            class="flex items-center justify-start gap-2"
          >
            <div
              class="text-dark-label-normal dark:text-label-normal"
              height="20"
              width="20"
            />
            <div
              class="flex flex-col gap-1"
            >
              <p
                class="text-14/body/emp text-dark-label-normal dark:text-label-normal"
              >
                Example Toast
              </p>
              <p
                class="text-dark-label-assertive dark:text-label-assertive text-12/body"
              >
                This is toast description.
              </p>
            </div>
          </div>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-normal dark:bg-dark-primary-normal disabled:bg-background-disabled dark:disabled:bg-dark-background-disabled disabled:text-label-disabled dark:disabled:text-dark-label-disabled h-8 px-4 text-14/button gap-1 relative overflow-hidden !text-label-normal dark:!text-dark-label-normal !w-fit !bg-normal dark:!bg-dark-normal"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Click me
            </span>
          </button>
        </div>
      </div>
      <div
        class="flex items-center gap-6"
      >
        <span
          class="w-[100px] text-14/body text-gray-600"
        >
          success
        </span>
        <div
          class="flex w-[360px] items-center justify-between gap-3 rounded-md bg-dark-normal px-4 py-3 dark:bg-normal"
        >
          <div
            class="flex items-center justify-start gap-2"
          >
            <div
              class="text-dark-status-positive dark:text-status-positive"
              height="20"
              width="20"
            />
            <div
              class="flex flex-col gap-1"
            >
              <p
                class="text-14/body/emp text-dark-status-positive dark:text-status-positive"
              >
                Example Toast
              </p>
            </div>
          </div>
        </div>
        <div
          class="flex w-[360px] items-center justify-between gap-3 rounded-md bg-dark-normal px-4 py-3 dark:bg-normal"
        >
          <div
            class="flex items-center justify-start gap-2"
          >
            <div
              class="text-dark-status-positive dark:text-status-positive"
              height="20"
              width="20"
            />
            <div
              class="flex flex-col gap-1"
            >
              <p
                class="text-14/body/emp text-dark-status-positive dark:text-status-positive"
              >
                Example Toast
              </p>
            </div>
          </div>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-normal dark:bg-dark-primary-normal disabled:bg-background-disabled dark:disabled:bg-dark-background-disabled disabled:text-label-disabled dark:disabled:text-dark-label-disabled h-8 px-4 text-14/button gap-1 relative overflow-hidden !text-label-normal dark:!text-dark-label-normal !w-fit !bg-normal dark:!bg-dark-normal"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Click me
            </span>
          </button>
        </div>
        <div
          class="flex w-[360px] items-center justify-between gap-3 rounded-md bg-dark-normal px-4 py-3 dark:bg-normal"
        >
          <div
            class="flex items-center justify-start gap-2"
          >
            <div
              class="text-dark-status-positive dark:text-status-positive"
              height="20"
              width="20"
            />
            <div
              class="flex flex-col gap-1"
            >
              <p
                class="text-14/body/emp text-dark-status-positive dark:text-status-positive"
              >
                Example Toast
              </p>
              <p
                class="text-dark-label-assertive dark:text-label-assertive text-12/body"
              >
                This is toast description.
              </p>
            </div>
          </div>
        </div>
        <div
          class="flex w-[360px] items-center justify-between gap-3 rounded-md bg-dark-normal px-4 py-3 dark:bg-normal"
        >
          <div
            class="flex items-center justify-start gap-2"
          >
            <div
              class="text-dark-status-positive dark:text-status-positive"
              height="20"
              width="20"
            />
            <div
              class="flex flex-col gap-1"
            >
              <p
                class="text-14/body/emp text-dark-status-positive dark:text-status-positive"
              >
                Example Toast
              </p>
              <p
                class="text-dark-label-assertive dark:text-label-assertive text-12/body"
              >
                This is toast description.
              </p>
            </div>
          </div>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-normal dark:bg-dark-primary-normal disabled:bg-background-disabled dark:disabled:bg-dark-background-disabled disabled:text-label-disabled dark:disabled:text-dark-label-disabled h-8 px-4 text-14/button gap-1 relative overflow-hidden !text-label-normal dark:!text-dark-label-normal !w-fit !bg-normal dark:!bg-dark-normal"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Click me
            </span>
          </button>
        </div>
      </div>
      <div
        class="flex items-center gap-6"
      >
        <span
          class="w-[100px] text-14/body text-gray-600"
        >
          error
        </span>
        <div
          class="flex w-[360px] items-center justify-between gap-3 rounded-md bg-dark-normal px-4 py-3 dark:bg-normal"
        >
          <div
            class="flex items-center justify-start gap-2"
          >
            <div
              class="text-dark-status-negative dark:text-status-negative"
              height="20"
              width="20"
            />
            <div
              class="flex flex-col gap-1"
            >
              <p
                class="text-14/body/emp text-dark-status-negative dark:text-status-negative"
              >
                Example Toast
              </p>
            </div>
          </div>
        </div>
        <div
          class="flex w-[360px] items-center justify-between gap-3 rounded-md bg-dark-normal px-4 py-3 dark:bg-normal"
        >
          <div
            class="flex items-center justify-start gap-2"
          >
            <div
              class="text-dark-status-negative dark:text-status-negative"
              height="20"
              width="20"
            />
            <div
              class="flex flex-col gap-1"
            >
              <p
                class="text-14/body/emp text-dark-status-negative dark:text-status-negative"
              >
                Example Toast
              </p>
            </div>
          </div>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-normal dark:bg-dark-primary-normal disabled:bg-background-disabled dark:disabled:bg-dark-background-disabled disabled:text-label-disabled dark:disabled:text-dark-label-disabled h-8 px-4 text-14/button gap-1 relative overflow-hidden !text-label-normal dark:!text-dark-label-normal !w-fit !bg-normal dark:!bg-dark-normal"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Click me
            </span>
          </button>
        </div>
        <div
          class="flex w-[360px] items-center justify-between gap-3 rounded-md bg-dark-normal px-4 py-3 dark:bg-normal"
        >
          <div
            class="flex items-center justify-start gap-2"
          >
            <div
              class="text-dark-status-negative dark:text-status-negative"
              height="20"
              width="20"
            />
            <div
              class="flex flex-col gap-1"
            >
              <p
                class="text-14/body/emp text-dark-status-negative dark:text-status-negative"
              >
                Example Toast
              </p>
              <p
                class="text-dark-label-assertive dark:text-label-assertive text-12/body"
              >
                This is toast description.
              </p>
            </div>
          </div>
        </div>
        <div
          class="flex w-[360px] items-center justify-between gap-3 rounded-md bg-dark-normal px-4 py-3 dark:bg-normal"
        >
          <div
            class="flex items-center justify-start gap-2"
          >
            <div
              class="text-dark-status-negative dark:text-status-negative"
              height="20"
              width="20"
            />
            <div
              class="flex flex-col gap-1"
            >
              <p
                class="text-14/body/emp text-dark-status-negative dark:text-status-negative"
              >
                Example Toast
              </p>
              <p
                class="text-dark-label-assertive dark:text-label-assertive text-12/body"
              >
                This is toast description.
              </p>
            </div>
          </div>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-normal dark:bg-dark-primary-normal disabled:bg-background-disabled dark:disabled:bg-dark-background-disabled disabled:text-label-disabled dark:disabled:text-dark-label-disabled h-8 px-4 text-14/button gap-1 relative overflow-hidden !text-label-normal dark:!text-dark-label-normal !w-fit !bg-normal dark:!bg-dark-normal"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Click me
            </span>
          </button>
        </div>
      </div>
      <div
        class="flex items-center gap-6"
      >
        <span
          class="w-[100px] text-14/body text-gray-600"
        >
          info
        </span>
        <div
          class="flex w-[360px] items-center justify-between gap-3 rounded-md bg-dark-normal px-4 py-3 dark:bg-normal"
        >
          <div
            class="flex items-center justify-start gap-2"
          >
            <div
              class="text-dark-label-normal dark:text-label-normal"
              height="20"
              width="20"
            />
            <div
              class="flex flex-col gap-1"
            >
              <p
                class="text-14/body/emp text-dark-label-normal dark:text-label-normal"
              >
                Example Toast
              </p>
            </div>
          </div>
        </div>
        <div
          class="flex w-[360px] items-center justify-between gap-3 rounded-md bg-dark-normal px-4 py-3 dark:bg-normal"
        >
          <div
            class="flex items-center justify-start gap-2"
          >
            <div
              class="text-dark-label-normal dark:text-label-normal"
              height="20"
              width="20"
            />
            <div
              class="flex flex-col gap-1"
            >
              <p
                class="text-14/body/emp text-dark-label-normal dark:text-label-normal"
              >
                Example Toast
              </p>
            </div>
          </div>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-normal dark:bg-dark-primary-normal disabled:bg-background-disabled dark:disabled:bg-dark-background-disabled disabled:text-label-disabled dark:disabled:text-dark-label-disabled h-8 px-4 text-14/button gap-1 relative overflow-hidden !text-label-normal dark:!text-dark-label-normal !w-fit !bg-normal dark:!bg-dark-normal"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Click me
            </span>
          </button>
        </div>
        <div
          class="flex w-[360px] items-center justify-between gap-3 rounded-md bg-dark-normal px-4 py-3 dark:bg-normal"
        >
          <div
            class="flex items-center justify-start gap-2"
          >
            <div
              class="text-dark-label-normal dark:text-label-normal"
              height="20"
              width="20"
            />
            <div
              class="flex flex-col gap-1"
            >
              <p
                class="text-14/body/emp text-dark-label-normal dark:text-label-normal"
              >
                Example Toast
              </p>
              <p
                class="text-dark-label-assertive dark:text-label-assertive text-12/body"
              >
                This is toast description.
              </p>
            </div>
          </div>
        </div>
        <div
          class="flex w-[360px] items-center justify-between gap-3 rounded-md bg-dark-normal px-4 py-3 dark:bg-normal"
        >
          <div
            class="flex items-center justify-start gap-2"
          >
            <div
              class="text-dark-label-normal dark:text-label-normal"
              height="20"
              width="20"
            />
            <div
              class="flex flex-col gap-1"
            >
              <p
                class="text-14/body/emp text-dark-label-normal dark:text-label-normal"
              >
                Example Toast
              </p>
              <p
                class="text-dark-label-assertive dark:text-label-assertive text-12/body"
              >
                This is toast description.
              </p>
            </div>
          </div>
          <button
            class="group w-fit inline-flex items-center justify-center whitespace-nowrap rounded-md transition-all duration-300 disabled:pointer-events-none bg-primary-normal dark:bg-dark-primary-normal disabled:bg-background-disabled dark:disabled:bg-dark-background-disabled disabled:text-label-disabled dark:disabled:text-dark-label-disabled h-8 px-4 text-14/button gap-1 relative overflow-hidden !text-label-normal dark:!text-dark-label-normal !w-fit !bg-normal dark:!bg-dark-normal"
          >
            <div
              class="absolute inset-0 bg-gray-950 opacity-0 transition-opacity duration-300 group-hover:opacity-[0.06] group-active:opacity-[0.12]"
            />
            <span
              class="relative z-10"
            >
              Click me
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
